<resources>
    <string name="app_name">Lịch Tân Á</string>
    <string name="title_home">Lịch Ngày</string>
    <string name="hoigui">Bạn có chắc chắn muốn gửi câu trả lời</string>
    <string name="ok">Đồng Ý</string>
    <string name="huy">Không</string>
    <string name="title_dashboard">Lịch Tháng</string>
    <string name="title_notifications">Tiện Ích</string>
    <string name="doubleclick">Nhấn Back 2 lần liên tiếp để thoát !</string>
    <string name="title_dungcuoc">Dừng cuộc chơi</string>
    <string name="content_dungcuoc">Bạn đã phải dừng cuộc chơi </string>
    <string name="content_ads">Xem quảng cáo ủng hộ chúng tôi. Ứng dụng này hoàn toàn miễn phí. Nhưng chúng tôi cần kinh phí để duy trì và phát triển ứng dụng. Chúng tôi KHÔNG muốn gắn quảng cáo ở trong ứng dụng làm mất trải nghiệm của quý khách. Nên chúng tôi tạo ra mục này để cho mọi người xem quảng cáo tự nguyện ủng hộ nhà phát triển chúng tôi. Mong nhận được sự đồng thuận của mọi người. Chân thành cảm ơn !</string>
    <string name="tiep">Tiếp</string>
    <string name="dung">Dừng</string>
    <string name="chiase">.</string>
    <string name="a">Bạn thân</string>
    <string name="b">Bạn đểu</string>
    <string name="c">Đồng nghiệp</string>
    <string name="d">Người nhà</string>
    <string name="e">Hàng xóm</string>
    <string name="f">Bồ bịch</string>
    <string name="immom">Bạn muốn gọi điện cho ai ?</string>
    <string name="call1">Hình như là đáp án  </string>
    <string name="call2">Không nhầm thì là đáp án  </string>
    <string name="call3">Chắc là đáp án  </string>
    <string name="call4">Chính xác là đáp án   </string>
    <string name="cai1">1:200</string>
    <string name="cai2">2:400</string>
    <string name="cai3">3:600</string>
    <string name="cai4">4:1000</string>
    <string name="cai5">5:2000</string>
    <string name="cai6">6:3000</string>
    <string name="cai7">7:6.000</string>
    <string name="cai8">8:10.000</string>
    <string name="cai9">9:14.000</string>
    <string name="cai10">10:22.000</string>
    <string name="cai11">11:30.000</string>
    <string name="cai12">12:40.000</string>
    <string name="cai13">13:60.000</string>
    <string name="cai14">14:85.000</string>
    <string name="cai15">15:150.000</string>
    <string name="app_id">ca-app-pub-2577061470072962~7195556179</string>
    <string name="banner_id">ca-app-pub-2577061470072962/4050518085</string>
    <string name="inapp_id">ca-app-pub-2577061470072962/2577654314</string>

</resources>
