<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_altp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_alignParentRight="true"
        android:layout_width="150dp"
        android:background="@drawable/bg_milestone"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvan15"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="#339900"
            android:text="@string/cai15"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan14"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/cai14"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai13"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai12"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai11"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="#339900"
            android:text="@string/cai10"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai9"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai8"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai7"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai6"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="#339900"
            android:textStyle="bold"
            android:text="@string/cai5"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/cai4"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai3"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/cai2"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:id="@+id/tvan1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cai1"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

    </LinearLayout>

</RelativeLayout>
