<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:background="@drawable/bg_milestone"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/tvCallChoAi"
        android:layout_width="wrap_content"
        android:text="@string/immom"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/tvCallChoAi"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"

            android:layout_height="0dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="onClickCall1"
android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/a"
                android:src="@drawable/banthan"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/b"
                android:onClick="onClickCall1"
                android:src="@drawable/bandeu"
                android:layout_marginRight="20dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="0dp"
                android:contentDescription="@string/c"
                android:layout_weight="1"
                android:onClick="onClickCall1"
                android:layout_marginRight="10dp"
                android:src="@drawable/dongnghiep"
                android:layout_height="match_parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp">
            <ImageView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/d"
                android:onClick="onClickCall1"
                android:src="@drawable/nguoinha"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/e"
                android:onClick="onClickCall1"
                android:layout_marginRight="20dp"
                android:src="@drawable/hangxom"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/f"
                android:onClick="onClickCall1"
                android:src="@drawable/bobich"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
